spring work demo

--- a/rabbitmq/src/main/resources/application.properties
+++ b/rabbitmq/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.rabbitmq.password=admin
 spring.profiles.active=hello-world
 logging.level.org=ERROR
 tutorial.client.duration=10000
+
+haixue.mq.hxExchangeName=hxexchange
+haixue.mq.orderGoodsRecordQueueName=hxorderordergoodsrecord
+haixue.mq.orderGoodsRecordQueueRoutingKey=hx.order.ordergoodsrecord
