--- a/rabbitmq/src/main/resources/application.properties
+++ b/rabbitmq/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## MQ
-spring.rabbitmq.host=rabbitmq.elapse.com
+spring.rabbitmq.host=47.52.119.227
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
@@ -7,10 +7,10 @@ spring.rabbitmq.password=admin
 #spring.rabbitmq.virtual-host=/
 
 
-spring.profiles.active=hello-world
+spring.profiles.active=work
 logging.level.org=ERROR
-tutorial.client.duration=10000
+tutorial.client.duration=2000
 
 haixue.mq.hxExchangeName=hxexchange
 haixue.mq.orderGoodsRecordQueueName=hxorderordergoodsrecord
-haixue.mq.orderGoodsRecordQueueRoutingKey=hx.order.ordergoodsrecord
+haixue.mq.orderGoodsRecordRoutingKey=hx.order.ordergoodsrecord
