--- a/rabbitmq/src/main/resources/application.properties
+++ b/rabbitmq/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## MQ
-spring.rabbitmq.host=47.52.119.227
+spring.rabbitmq.host=rabbitmq.elapse.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
@@ -9,7 +9,7 @@ spring.rabbitmq.password=admin
 
 spring.profiles.active=work
 logging.level.org=ERROR
-tutorial.client.duration=2000
+tutorial.client.duration=1000
 
 haixue.mq.hxExchangeName=hxexchange
 haixue.mq.orderGoodsRecordQueueName=hxorderordergoodsrecord
